metatensor-core/include/metatensor.h


#define MTS_SUCCESS 0
#define MTS_INVALID_PARAMETER_ERROR 1
#define MTS_IO_ERROR 2
#define MTS_SERIALIZATION_ERROR 3
#define MTS_BUFFER_SIZE_ERROR 254
#define MTS_INTERNAL_ERROR 255
typedef struct mts_block_t mts_block_t;
typedef struct mts_tensormap_t mts_tensormap_t;
typedef int32_t mts_status_t;
typedef struct mts_labels_t {
  void *internal_ptr_;
  const char *const *names;
  const int32_t *values;
  uintptr_t size;
  uintptr_t count;
} mts_labels_t;
typedef uint64_t mts_data_origin_t;
typedef struct mts_sample_mapping_t {
  uintptr_t input;
  uintptr_t output;
} mts_sample_mapping_t;
typedef struct mts_array_t {
  void *ptr;
  mts_status_t (*origin)(const void *array, mts_data_origin_t *origin);
  mts_status_t (*data)(void *array, double **data);
  mts_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  mts_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  mts_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  mts_status_t (*create)(const void *array,
                         const uintptr_t *shape,
                         uintptr_t shape_count,
                         struct mts_array_t *new_array);
  mts_status_t (*copy)(const void *array, struct mts_array_t *new_array);
  void (*destroy)(void *array);
  mts_status_t (*move_samples_from)(void *output,
                                    const void *input,
                                    const struct mts_sample_mapping_t *samples,
                                    uintptr_t samples_count,
                                    uintptr_t property_start,
                                    uintptr_t property_end);
} mts_array_t;
typedef uint8_t *(*mts_realloc_buffer_t)(void *user_data, uint8_t *ptr, uintptr_t new_size);
typedef mts_status_t (*mts_create_array_callback_t)(const uintptr_t *shape,
                                                    uintptr_t shape_count,
                                                    struct mts_array_t *array);
void mts_disable_panic_printing(void);
const char *mts_version(void);
const char *mts_last_error(void);
mts_status_t mts_labels_position(struct mts_labels_t labels,
                                 const int32_t *values,
                                 uintptr_t values_count,
                                 int64_t *result);
mts_status_t mts_labels_create(struct mts_labels_t *labels);
mts_status_t mts_labels_set_user_data(struct mts_labels_t labels,
                                      void *user_data,
                                      void (*user_data_delete)(void*));
mts_status_t mts_labels_user_data(struct mts_labels_t labels, void **user_data);
mts_status_t mts_labels_clone(struct mts_labels_t labels, struct mts_labels_t *clone);
mts_status_t mts_labels_union(struct mts_labels_t first,
                              struct mts_labels_t second,
                              struct mts_labels_t *result,
                              int64_t *first_mapping,
                              uintptr_t first_mapping_count,
                              int64_t *second_mapping,
                              uintptr_t second_mapping_count);
mts_status_t mts_labels_intersection(struct mts_labels_t first,
                                     struct mts_labels_t second,
                                     struct mts_labels_t *result,
                                     int64_t *first_mapping,
                                     uintptr_t first_mapping_count,
                                     int64_t *second_mapping,
                                     uintptr_t second_mapping_count);
mts_status_t mts_labels_free(struct mts_labels_t *labels);
mts_status_t mts_register_data_origin(const char *name, mts_data_origin_t *origin);
mts_status_t mts_get_data_origin(mts_data_origin_t origin, char *buffer, uintptr_t buffer_size);
struct mts_block_t *mts_block(struct mts_array_t data,
                              struct mts_labels_t samples,
                              const struct mts_labels_t *components,
                              uintptr_t components_count,
                              struct mts_labels_t properties);
mts_status_t mts_block_free(struct mts_block_t *block);
struct mts_block_t *mts_block_copy(const struct mts_block_t *block);
mts_status_t mts_block_labels(const struct mts_block_t *block,
                              uintptr_t axis,
                              struct mts_labels_t *labels);
mts_status_t mts_block_gradient(struct mts_block_t *block,
                                const char *parameter,
                                struct mts_block_t **gradient);
mts_status_t mts_block_data(struct mts_block_t *block, struct mts_array_t *data);
mts_status_t mts_block_add_gradient(struct mts_block_t *block,
                                    const char *parameter,
                                    struct mts_block_t *gradient);
mts_status_t mts_block_gradients_list(const struct mts_block_t *block,
                                      const char *const **parameters,
                                      uintptr_t *parameters_count);
struct mts_tensormap_t *mts_tensormap(struct mts_labels_t keys,
                                      struct mts_block_t **blocks,
                                      uintptr_t blocks_count);
mts_status_t mts_tensormap_free(struct mts_tensormap_t *tensor);
struct mts_tensormap_t *mts_tensormap_copy(const struct mts_tensormap_t *tensor);
mts_status_t mts_tensormap_keys(const struct mts_tensormap_t *tensor, struct mts_labels_t *keys);
mts_status_t mts_tensormap_block_by_id(struct mts_tensormap_t *tensor,
                                       struct mts_block_t **block,
                                       uintptr_t index);
mts_status_t mts_tensormap_blocks_matching(const struct mts_tensormap_t *tensor,
                                           uintptr_t *block_indexes,
                                           uintptr_t *count,
                                           struct mts_labels_t selection);
struct mts_tensormap_t *mts_tensormap_keys_to_properties(const struct mts_tensormap_t *tensor,
                                                         struct mts_labels_t keys_to_move,
                                                         bool sort_samples);
struct mts_tensormap_t *mts_tensormap_components_to_properties(struct mts_tensormap_t *tensor,
                                                               const char *const *dimensions,
                                                               uintptr_t dimensions_count);
struct mts_tensormap_t *mts_tensormap_keys_to_samples(const struct mts_tensormap_t *tensor,
                                                      struct mts_labels_t keys_to_move,
                                                      bool sort_samples);
mts_status_t mts_labels_load(const char *path, struct mts_labels_t *labels);
mts_status_t mts_labels_load_buffer(const uint8_t *buffer,
                                    uintptr_t buffer_count,
                                    struct mts_labels_t *labels);
mts_status_t mts_labels_save(const char *path, struct mts_labels_t labels);
mts_status_t mts_labels_save_buffer(uint8_t **buffer,
                                    uintptr_t *buffer_count,
                                    void *realloc_user_data,
                                    mts_realloc_buffer_t realloc,
                                    struct mts_labels_t labels);
struct mts_tensormap_t *mts_tensormap_load(const char *path,
                                           mts_create_array_callback_t create_array);
struct mts_tensormap_t *mts_tensormap_load_buffer(const uint8_t *buffer,
                                                  uintptr_t buffer_count,
                                                  mts_create_array_callback_t create_array);
mts_status_t mts_tensormap_save(const char *path, const struct mts_tensormap_t *tensor);
mts_status_t mts_tensormap_save_buffer(uint8_t **buffer,
                                       uintptr_t *buffer_count,
                                       void *realloc_user_data,
                                       mts_realloc_buffer_t realloc,
                                       const struct mts_tensormap_t *tensor);